<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:useDefaultMargins="true"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="138dp"
            app:columnCount= "2">

            <TextView
                android:id="@+id/movie_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heading_movie"
                android:textSize="25dp"
                tools:layout_editor_absoluteX="138dp"
                tools:layout_editor_absoluteY="67dp"
                app:layout_columnSpan = "2"
                />

            <TextView
                android:id="@+id/movie_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menuitem_label_title"
                tools:layout_editor_absoluteX="138dp"
                tools:layout_editor_absoluteY="67dp"
                />

            <EditText
                android:id="@+id/movie_title_edit"/>

            <TextView
                android:id="@+id/movie_year_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menuitem_label_Year"
                tools:layout_editor_absoluteX="138dp"
                tools:layout_editor_absoluteY="67dp"
                />

            <EditText
                android:id="@+id/movie_year_edit"/>

            <TextView
                android:id="@+id/movie_runtime_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menuitem_label_runtime"
                tools:layout_editor_absoluteX="138dp"
                tools:layout_editor_absoluteY="67dp"
                />

            <EditText
                android:id="@+id/movie_runtime_edit"/>

            <TextView
                android:id="@+id/movie_collection_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menuitem_collection"
                tools:layout_editor_absoluteX="138dp"
                tools:layout_editor_absoluteY="67dp"
                />

            <EditText
                android:id="@+id/movie_collection_edit"/>

            <TextView
                android:id="@+id/movie_director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menuitem_label_director"
                android:textSize="25dp"
                tools:layout_editor_absoluteX="138dp"
                tools:layout_editor_absoluteY="67dp"
                app:layout_columnSpan = "2"
                />
            <TextView
                android:id="@+id/movie_director_firstname_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_director_first"
                tools:layout_editor_absoluteX="138dp"
                tools:layout_editor_absoluteY="67dp"
                />

            <EditText
                android:id="@+id/movie_director_firstname_edit"/>

            <TextView
                android:id="@+id/movie_director_lastname_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_director_last"
                tools:layout_editor_absoluteX="138dp"
                tools:layout_editor_absoluteY="67dp"
                />

            <EditText
                android:id="@+id/movie_director_lastname_edit"/>

        </android.support.v7.widget.GridLayout>
    </ScrollView>



</android.support.constraint.ConstraintLayout>